@@ -1,6 +1,7 @@
 Changes in quota-tools from 3.02 to 3.03
 
-*
+* quotacheck now skips quota file scanning when file not found (Jan Kara)
+* repquota shouldn't show grace times when softlimit is not exceeded (Jan Kara)
 * removed bogus error message in mountpoint scanning (Jan Kara)
 * fixed mountpoint scanning initialization (solved rpc.rquotad SEGFAULT) (Jan Kara)
 * rpc.rquotad now doesn't need mountpoint for quota operations (Jan Kara)
